--- a/index.html
+++ b/index.html
@@ -182,6 +182,18 @@
         </td>
         <td>Довідник</td>
       </tr>
+      <tr>
+        <td>16</td>
+        <td>
+          <a
+            class="link"
+            target="_blank"
+            href="https://validator.w3.org/#validate_by_input"
+            >Validate by direct input</a
+          >
+        </td>
+        <td>Валідатор перевірка коду</td>
+      </tr>
     </table>
   </body>
 </html>
