--- a/index.html
+++ b/index.html
@@ -194,6 +194,18 @@
         </td>
         <td>Валідатор перевірка коду</td>
       </tr>
+      <tr>
+        <td>17</td>
+        <td>
+          <a
+            class="link"
+            target="_blank"
+            href="https://www.figma.com/file/GcmvdEcj62S0cIIPUYuC4E/Wireframing-in-Figma?node-id=0%3A817"
+            >Figma</a
+          >
+        </td>
+        <td>Учбовий проект</td>
+      </tr>
     </table>
   </body>
 </html>
