--- a/index.html
+++ b/index.html
@@ -8,204 +8,214 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <table>
-      <caption>
-        Всі посилання для HTML, CSS, JavaScript
-      </caption>
-      <tr>
-        <th>№ п/п</th>
-        <th>Посилання</th>
-        <th>Найменування</th>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://github.com/yoksel/common-words"
-            >Слова, часто используемые в CSS-классах</a
-          >
-        </td>
-        <td>Слова які використовуються для класів CSS</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://github.com/nicothin/idiomatic-pre-CSS/blob/gh-pages/words_and_abbreviations.md"
-            >Слова и сокращения в CSS-классах</a
-          >
-        </td>
-        <td>Слова та скорочення в класах CSS</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://htmlcolorcodes.com/color-picker/"
-            >Color Picker</a
-          >
-        </td>
-        <td>Всі кольори за номерами</td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://htmlcolorcodes.com/color-names/"
-            >Red HTML Color Names</a
-          >
-        </td>
-        <td>Всі кольори за номерами</td>
-      </tr>
-      <tr>
-        <td>5</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://ymatuhin.ru/front-end/font-display/"
-            >Управляем поведением font-face в CSS</a
-          >
-        </td>
-        <td>Керування процесом завантаження шрифтів</td>
-      </tr>
-      <tr>
-        <td>6</td>
-        <td>
-          <a class="link" target="_blank" href="https://unicode-table.com/en/"
-            >Unicode Character Table</a
-          >
-        </td>
-        <td>Спеціальні запатентовані Unicode</td>
-      </tr>
-      <tr>
-        <td>7</td>
-        <td>
-          <a class="link" target="_blank" href="https://unicode-table.com/en/"
-            >Unicode Character Table</a
-          >
-        </td>
-        <td>Спеціальні запатентовані Unicode</td>
-      </tr>
-      <tr>
-        <td>8</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://html.spec.whatwg.org/multipage/semantics.html#the-meta-element"
-            >HTML</a
-          >
-        </td>
-        <td>Загальні паравила HTML</td>
-      </tr>
-      <tr>
-        <td>9</td>
-        <td>
-          <a class="link" target="_blank" href="https://cssreference.io/"
-            >CSS Reference type</a
-          >
-        </td>
-        <td>Всі команди CSS</td>
-      </tr>
-      <tr>
-        <td>10</td>
-        <td>
-          <a class="link" target="_blank" href="https://htmlreference.io/"
-            >HTML Reference type</a
-          >
-        </td>
-        <td>Всі тегі HTML</td>
-      </tr>
-      <tr>
-        <td>11</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://google-webfonts-helper.herokuapp.com/fonts"
-            >google-webfonts-helper</a
-          >
-        </td>
-        <td>Завантаження шрифтів</td>
-      </tr>
-      <tr>
-        <td>12</td>
-        <td>
-          <a class="link" target="_blank" href="https://fonts.google.com/"
-            >Google Fonts</a
-          >
-        </td>
-        <td>Завантаження шрифтів</td>
-      </tr>
-      <tr>
-        <td>13</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://developer.mozilla.org/ru/docs/Web/CSS/background-image"
-            >MDN Plus</a
-          >
-        </td>
-        <td>Розшифрування всіх тегів HTML та стилів CSS</td>
-      </tr>
-      <tr>
-        <td>14</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://www.edu.goit.global/uk/learn/6081611/845990/845996/textbook"
-            >GO-IT</a
-          >
-        </td>
-        <td>Сторінка користувача GO-IT</td>
-      </tr>
-      <tr>
-        <td>15</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://w3schoolsua.github.io/html/html_id.html"
-            >НАЙКРАЩИЙ САЙТ ДЛЯ ВЕБ-РОЗРОБНИКІВ</a
-          >
-        </td>
-        <td>Довідник</td>
-      </tr>
-      <tr>
-        <td>16</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://validator.w3.org/#validate_by_input"
-            >Validate by direct input</a
-          >
-        </td>
-        <td>Валідатор перевірка коду</td>
-      </tr>
-      <tr>
-        <td>17</td>
-        <td>
-          <a
-            class="link"
-            target="_blank"
-            href="https://www.figma.com/file/GcmvdEcj62S0cIIPUYuC4E/Wireframing-in-Figma?node-id=0%3A817"
-            >Figma</a
-          >
-        </td>
-        <td>Учбовий проект</td>
-      </tr>
-    </table>
+    <header>
+      <nav class="navigation">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./video.html">Instructional video</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <table>
+        <caption>
+          Всі посилання для HTML, CSS, JavaScript
+        </caption>
+        <tr>
+          <th>№ п/п</th>
+          <th>Посилання</th>
+          <th>Найменування</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://github.com/yoksel/common-words"
+              >Слова, часто используемые в CSS-классах</a
+            >
+          </td>
+          <td>Слова які використовуються для класів CSS</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://github.com/nicothin/idiomatic-pre-CSS/blob/gh-pages/words_and_abbreviations.md"
+              >Слова и сокращения в CSS-классах</a
+            >
+          </td>
+          <td>Слова та скорочення в класах CSS</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://htmlcolorcodes.com/color-picker/"
+              >Color Picker</a
+            >
+          </td>
+          <td>Всі кольори за номерами</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://htmlcolorcodes.com/color-names/"
+              >Red HTML Color Names</a
+            >
+          </td>
+          <td>Всі кольори за номерами</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://ymatuhin.ru/front-end/font-display/"
+              >Управляем поведением font-face в CSS</a
+            >
+          </td>
+          <td>Керування процесом завантаження шрифтів</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>
+            <a class="link" target="_blank" href="https://unicode-table.com/en/"
+              >Unicode Character Table</a
+            >
+          </td>
+          <td>Спеціальні запатентовані Unicode</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>
+            <a class="link" target="_blank" href="https://unicode-table.com/en/"
+              >Unicode Character Table</a
+            >
+          </td>
+          <td>Спеціальні запатентовані Unicode</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://html.spec.whatwg.org/multipage/semantics.html#the-meta-element"
+              >HTML</a
+            >
+          </td>
+          <td>Загальні паравила HTML</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>
+            <a class="link" target="_blank" href="https://cssreference.io/"
+              >CSS Reference type</a
+            >
+          </td>
+          <td>Всі команди CSS</td>
+        </tr>
+        <tr>
+          <td>10</td>
+          <td>
+            <a class="link" target="_blank" href="https://htmlreference.io/"
+              >HTML Reference type</a
+            >
+          </td>
+          <td>Всі тегі HTML</td>
+        </tr>
+        <tr>
+          <td>11</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://google-webfonts-helper.herokuapp.com/fonts"
+              >google-webfonts-helper</a
+            >
+          </td>
+          <td>Завантаження шрифтів</td>
+        </tr>
+        <tr>
+          <td>12</td>
+          <td>
+            <a class="link" target="_blank" href="https://fonts.google.com/"
+              >Google Fonts</a
+            >
+          </td>
+          <td>Завантаження шрифтів</td>
+        </tr>
+        <tr>
+          <td>13</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://developer.mozilla.org/ru/docs/Web/CSS/background-image"
+              >MDN Plus</a
+            >
+          </td>
+          <td>Розшифрування всіх тегів HTML та стилів CSS</td>
+        </tr>
+        <tr>
+          <td>14</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://www.edu.goit.global/uk/learn/6081611/845990/845996/textbook"
+              >GO-IT</a
+            >
+          </td>
+          <td>Сторінка користувача GO-IT</td>
+        </tr>
+        <tr>
+          <td>15</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://w3schoolsua.github.io/html/html_id.html"
+              >НАЙКРАЩИЙ САЙТ ДЛЯ ВЕБ-РОЗРОБНИКІВ</a
+            >
+          </td>
+          <td>Довідник</td>
+        </tr>
+        <tr>
+          <td>16</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://validator.w3.org/#validate_by_input"
+              >Validate by direct input</a
+            >
+          </td>
+          <td>Валідатор перевірка коду</td>
+        </tr>
+        <tr>
+          <td>17</td>
+          <td>
+            <a
+              class="link"
+              target="_blank"
+              href="https://www.figma.com/file/GcmvdEcj62S0cIIPUYuC4E/Wireframing-in-Figma?node-id=0%3A817"
+              >Figma</a
+            >
+          </td>
+          <td>Учбовий проект</td>
+        </tr>
+      </table>
+    </main>
   </body>
 </html>
