--- a/video.html
+++ b/video.html
@@ -27,9 +27,12 @@
           <th>Найменування</th>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>1</td>
+          <td>
+            <a href="https://www.youtube.com/watch?v=KIunqi08-G4"></a>Лекція 0.
+            HTML та CSS. Частина 1
+          </td>
+          <td>Лекція HTML та CSS 1 part</td>
         </tr>
       </table>
     </main>
