--- a/video.html
+++ b/video.html
@@ -21,19 +21,24 @@
         <caption>
           Всі навчальні відео за курсом
         </caption>
-        <tr>
-          <th>№ п/п</th>
-          <th>Посилання</th>
-          <th>Найменування</th>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>
-            <a href="https://www.youtube.com/watch?v=KIunqi08-G4"></a>Лекція 0.
-            HTML та CSS. Частина 1
-          </td>
-          <td>Лекція HTML та CSS 1 part</td>
-        </tr>
+        <thead>
+          <tr>
+            <th>№ п/п</th>
+            <th>Посилання</th>
+            <th>Найменування</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>
+              <a href="https://www.youtube.com/watch?v=KIunqi08-G4"
+                >Лекція 0. HTML та CSS. Частина 1</a
+              >
+            </td>
+            <td>Лекція HTML та CSS 1 part</td>
+          </tr>
+        </tbody>
       </table>
     </main>
   </body>
