--- a/video.html
+++ b/video.html
@@ -32,7 +32,10 @@
           <tr>
             <td>1</td>
             <td>
-              <a href="https://www.youtube.com/watch?v=KIunqi08-G4"
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.youtube.com/watch?v=KIunqi08-G4"
                 >Лекція 0. HTML та CSS. Частина 1</a
               >
             </td>
