--- a/video.html
+++ b/video.html
@@ -41,6 +41,18 @@
             </td>
             <td>Лекція HTML та CSS 1 part</td>
           </tr>
+          <tr>
+            <td>2</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.youtube.com/watch?v=1wXFcr71pqs"
+                >Лекція 0. HTML та CSS. Частина 2</a
+              >
+            </td>
+            <td>Лекція HTML та CSS 2 part</td>
+          </tr>
         </tbody>
       </table>
     </main>
