--- a/index.html
+++ b/index.html
@@ -224,6 +224,19 @@
             </td>
             <td>Учбовий проект</td>
           </tr>
+          </tr>
+          <tr>
+            <td>17</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.figma.com/file/1ehrLBauvVFu4mVhxsHzyZ/Web-Studio-(Version-2.1)?node-id=0%3A1"
+                >Figma 1 homework</a
+              >
+            </td>
+            <td>Домашня робота 1</td>
+          </tr>
         </tbody>
       </table>
     </main>
