--- a/index.html
+++ b/index.html
@@ -237,6 +237,18 @@
             </td>
             <td>Домашня робота 1</td>
           </tr>
+          tr>
+            <td>18</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.figma.com/file/z6Rb84e4NKxe66QNokOWA8/Barbershop-EN?node-id=1374%3A32"
+                >Figma Barbershop</a
+              >
+            </td>
+            <td>GO-IT Barbershop</td>
+          </tr>
         </tbody>
       </table>
     </main>
