--- a/video.html
+++ b/video.html
@@ -53,6 +53,30 @@
             </td>
             <td>Лекція HTML та CSS 2 part</td>
           </tr>
+          <tr>
+            <td>3</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.youtube.com/watch?v=k6IxRD5BEXY"
+                >Модуль 1. Вебинар 1. Основы HTML часть 1</a
+              >
+            </td>
+            <td>Модуль 1. Вебинар 1. Основы HTML часть 1 Александр</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.youtube.com/watch?v=lKAVnNi9ZCM"
+                >Модуль 1. Вебинар №2. Основы HTML часть 2</a
+              >
+            </td>
+            <td>Модуль 1. Вебинар №2. Основы HTML часть 2 Александр</td>
+          </tr>
         </tbody>
       </table>
     </main>
