--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 >Figma</a
               >
             </td>
-            <td>Учбовий проект</td>
+            <td>GO-IT Учбовий проект</td>
           </tr>
           </tr>
           <tr>
@@ -235,7 +235,7 @@
                 >Figma 1 homework</a
               >
             </td>
-            <td>Домашня робота 1</td>
+            <td>GO-IT Домашня робота 1</td>
           </tr>
           <tr>
             <td>18</td>
