--- a/index.html
+++ b/index.html
@@ -249,6 +249,18 @@
             </td>
             <td>GO-IT Barbershop</td>
           </tr>
+          <tr>
+            <td>19</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://getbootstrap.com/docs/5.2/getting-started/introduction/"
+                >Get started with Bootstrap</a
+              >
+            </td>
+            <td>Готові тегі з класами</td>
+          </tr>
         </tbody>
       </table>
     </main>
