--- a/video.html
+++ b/video.html
@@ -77,6 +77,18 @@
             </td>
             <td>Модуль 1. Вебинар №2. Основы HTML часть 2 Александр</td>
           </tr>
+          <tr>
+            <td>5</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.youtube.com/watch?v=hi4Sb-_Ud0U"
+                >[FSON #66] Модуль 1 Заняття 1</a
+              >
+            </td>
+            <td>GO-IT 1 lessons (HTML)</td>
+          </tr>
         </tbody>
       </table>
     </main>
