--- a/index.html
+++ b/index.html
@@ -261,6 +261,19 @@
             </td>
             <td>Готові тегі з класами</td>
           </tr>
+          </tr>
+          <tr>
+            <td>20</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://jakearchibald.github.io/svgomg/"
+                >SVGOMG</a
+              >
+            </td>
+            <td>Конвертація SVG</td>
+          </tr>
         </tbody>
       </table>
     </main>
