--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://github.com/yoksel/common-words"
+                href="https://github.com/yoksel/common-words" rel="noopener norefferer nofollow"
                 >Слова, часто используемые в CSS-классах</a
               >
             </td>
@@ -47,7 +47,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://github.com/nicothin/idiomatic-pre-CSS/blob/gh-pages/words_and_abbreviations.md"
+                href="https://github.com/nicothin/idiomatic-pre-CSS/blob/gh-pages/words_and_abbreviations.md" rel="noopener norefferer nofollow"
                 >Слова и сокращения в CSS-классах</a
               >
             </td>
@@ -59,7 +59,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://htmlcolorcodes.com/color-picker/"
+                href="https://htmlcolorcodes.com/color-picker/" rel="noopener norefferer nofollow"
                 >Color Picker</a
               >
             </td>
@@ -71,7 +71,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://htmlcolorcodes.com/color-names/"
+                href="https://htmlcolorcodes.com/color-names/" rel="noopener norefferer nofollow"
                 >Red HTML Color Names</a
               >
             </td>
@@ -83,7 +83,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://ymatuhin.ru/front-end/font-display/"
+                href="https://ymatuhin.ru/front-end/font-display/" rel="noopener norefferer nofollow"
                 >Управляем поведением font-face в CSS</a
               >
             </td>
@@ -95,7 +95,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://unicode-table.com/en/"
+                href="https://unicode-table.com/en/" rel="noopener norefferer nofollow"
                 >Unicode Character Table</a
               >
             </td>
@@ -107,7 +107,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://unicode-table.com/en/"
+                href="https://unicode-table.com/en/" rel="noopener norefferer nofollow"
                 >Unicode Character Table</a
               >
             </td>
@@ -119,7 +119,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://html.spec.whatwg.org/multipage/semantics.html#the-meta-element"
+                href="https://html.spec.whatwg.org/multipage/semantics.html#the-meta-element" rel="noopener norefferer nofollow"
                 >HTML</a
               >
             </td>
@@ -128,7 +128,7 @@
           <tr>
             <td>9</td>
             <td>
-              <a class="link" target="_blank" href="https://cssreference.io/"
+              <a class="link" target="_blank" href="https://cssreference.io/" rel="noopener norefferer nofollow"
                 >CSS Reference type</a
               >
             </td>
@@ -137,7 +137,7 @@
           <tr>
             <td>10</td>
             <td>
-              <a class="link" target="_blank" href="https://htmlreference.io/"
+              <a class="link" target="_blank" href="https://htmlreference.io/" rel="noopener norefferer nofollow"
                 >HTML Reference type</a
               >
             </td>
@@ -149,7 +149,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://google-webfonts-helper.herokuapp.com/fonts"
+                href="https://google-webfonts-helper.herokuapp.com/fonts" rel="noopener norefferer nofollow"
                 >google-webfonts-helper</a
               >
             </td>
@@ -158,7 +158,7 @@
           <tr>
             <td>12</td>
             <td>
-              <a class="link" target="_blank" href="https://fonts.google.com/"
+              <a class="link" target="_blank" href="https://fonts.google.com/" rel="noopener norefferer nofollow"
                 >Google Fonts</a
               >
             </td>
@@ -170,7 +170,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://developer.mozilla.org/ru/docs/Web/CSS/background-image"
+                href="https://developer.mozilla.org/ru/docs/Web/CSS/background-image" rel="noopener norefferer nofollow"
                 >MDN Plus</a
               >
             </td>
@@ -182,7 +182,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://www.edu.goit.global/uk/learn/6081611/845990/845996/textbook"
+                href="https://www.edu.goit.global/uk/learn/6081611/845990/845996/textbook" rel="noopener norefferer nofollow"
                 >GO-IT</a
               >
             </td>
@@ -194,7 +194,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://w3schoolsua.github.io/html/html_id.html"
+                href="https://w3schoolsua.github.io/html/html_id.html" rel="noopener norefferer nofollow"
                 >НАЙКРАЩИЙ САЙТ ДЛЯ ВЕБ-РОЗРОБНИКІВ</a
               >
             </td>
@@ -206,7 +206,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://validator.w3.org/#validate_by_input"
+                href="https://validator.w3.org/#validate_by_input" rel="noopener norefferer nofollow"
                 >Validate by direct input</a
               >
             </td>
@@ -218,7 +218,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://www.figma.com/file/GcmvdEcj62S0cIIPUYuC4E/Wireframing-in-Figma?node-id=0%3A817"
+                href="https://www.figma.com/file/GcmvdEcj62S0cIIPUYuC4E/Wireframing-in-Figma?node-id=0%3A817" rel="noopener norefferer nofollow"
                 >Figma</a
               >
             </td>
@@ -231,7 +231,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://www.figma.com/file/1ehrLBauvVFu4mVhxsHzyZ/Web-Studio-(Version-2.1)?node-id=0%3A1"
+                href="https://www.figma.com/file/1ehrLBauvVFu4mVhxsHzyZ/Web-Studio-(Version-2.1)?node-id=0%3A1" rel="noopener norefferer nofollow"
                 >Figma 1 homework</a
               >
             </td>
@@ -243,7 +243,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://www.figma.com/file/z6Rb84e4NKxe66QNokOWA8/Barbershop-EN?node-id=1374%3A32"
+                href="https://www.figma.com/file/z6Rb84e4NKxe66QNokOWA8/Barbershop-EN?node-id=1374%3A32" rel="noopener norefferer nofollow"
                 >Figma Barbershop</a
               >
             </td>
@@ -255,7 +255,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://getbootstrap.com/docs/5.2/getting-started/introduction/"
+                href="https://getbootstrap.com/docs/5.2/getting-started/introduction/" rel="noopener norefferer nofollow"
                 >Get started with Bootstrap</a
               >
             </td>
@@ -268,7 +268,7 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://jakearchibald.github.io/svgomg/"
+                href="https://jakearchibald.github.io/svgomg/" rel="noopener norefferer nofollow"
                 >SVGOMG</a
               >
             </td>
