--- a/video.html
+++ b/video.html
@@ -36,6 +36,7 @@
                 class="link"
                 target="_blank"
                 href="https://www.youtube.com/watch?v=KIunqi08-G4"
+                rel="noopener norefferer nofollow"
                 >Лекція 0. HTML та CSS. Частина 1</a
               >
             </td>
@@ -48,6 +49,7 @@
                 class="link"
                 target="_blank"
                 href="https://www.youtube.com/watch?v=1wXFcr71pqs"
+                rel="noopener norefferer nofollow"
                 >Лекція 0. HTML та CSS. Частина 2</a
               >
             </td>
@@ -60,6 +62,7 @@
                 class="link"
                 target="_blank"
                 href="https://www.youtube.com/watch?v=k6IxRD5BEXY"
+                rel="noopener norefferer nofollow"
                 >Модуль 1. Вебинар 1. Основы HTML часть 1</a
               >
             </td>
@@ -72,6 +75,7 @@
                 class="link"
                 target="_blank"
                 href="https://www.youtube.com/watch?v=lKAVnNi9ZCM"
+                rel="noopener norefferer nofollow"
                 >Модуль 1. Вебинар №2. Основы HTML часть 2</a
               >
             </td>
@@ -84,10 +88,24 @@
                 class="link"
                 target="_blank"
                 href="https://www.youtube.com/watch?v=hi4Sb-_Ud0U"
+                rel="noopener norefferer nofollow"
                 >[FSON #66] Модуль 1 Заняття 1</a
               >
             </td>
             <td>GO-IT 1 lessons (HTML)</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.youtube.com/watch?v=B4i-IGwjaI8s"
+                rel="noopener norefferer nofollow"
+                >[FSon #66] Модуль 1 Заняття 2</a
+              >
+            </td>
+            <td>GO-IT 2 lessons (HTML)</td>
           </tr>
         </tbody>
       </table>
