--- a/index.html
+++ b/index.html
@@ -10,36 +10,36 @@
   <body>
     <header>
       <nav class="navigation">
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./video.html">Instructional video</a></li>
+        <ul class="list">
+          <li class="list-link"><a href="./index.html">Home</a></li>
+          <li class="list-link"><a href="./video.html">Instructional video</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <table>
+      <table class="tabel">
         <caption>
           Всі посилання для HTML, CSS, JavaScript
         </caption>
-        <thead>
-          <tr>
-            <th>№ п/п</th>
-            <th>Посилання</th>
-            <th>Найменування</th>
+        <thead class="tabel-head">
+          <tr class="table-tags">
+            <th class="table-list">№ п/п</th>
+            <th class="table-list">Посилання</th>
+            <th class="table-list">Найменування</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>
+        <tbody class="tabel-body">
+          <tr class="table-tags">
+            <td class="table-list">1</td>
+            <td class="table-list">
               <a
                 class="link"
                 target="_blank"
                 href="https://github.com/yoksel/common-words" rel="noopener norefferer nofollow"
                 >Слова, часто используемые в CSS-классах</a
               >
-            </td>
-            <td>Слова які використовуються для класів CSS</td>
+            </td class="table-list">
+            <td class="table-list">Слова які використовуються для класів CSS</td>
           </tr>
           <tr>
             <td>2</td>
