--- a/video.html
+++ b/video.html
@@ -10,14 +10,16 @@
   <body>
     <header>
       <nav class="navigation">
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./video.html">Instructional video</a></li>
+        <ul class="list">
+          <li class="list-link"><a href="./index.html">Home</a></li>
+          <li class="list-link">
+            <a href="./video.html">Instructional video</a>
+          </li>
         </ul>
       </nav>
     </header>
     <main>
-      <table>
+      <table class="tabel">
         <caption>
           Всі навчальні відео за курсом
         </caption>
@@ -28,7 +30,7 @@
             <th>Найменування</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="tabel-body">
           <tr>
             <td>1</td>
             <td>
@@ -106,6 +108,34 @@
               >
             </td>
             <td>GO-IT 2 lessons (HTML)</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.youtube.com/watch?v=bn9yIxt_rtg"
+                rel="noopener norefferer nofollow"
+                >Модуль 2. Вебинар №3. Основы CSS. Селекторы. Цвет.</a
+              >
+            </td>
+            <td>
+              Модуль 2. Вебинар №3. Основы CSS. Селекторы. Цвет. Александр
+            </td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.youtube.com/watch?v=KM5r3qtBdxY"
+                rel="noopener norefferer nofollow"
+                >Модуль 2. Вебинар №4. Оформление текста и шрифты</a
+              >
+            </td>
+            <td>Модуль 2. Вебинар №4. Оформление текста и шрифты Александр</td>
           </tr>
         </tbody>
       </table>
