--- a/index.html
+++ b/index.html
@@ -274,6 +274,44 @@
             </td>
             <td>Конвертація SVG</td>
           </tr>
+          </tr>
+          </tr>
+          <tr>
+            <td>21</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://devhints.io/css-system-font-stack" rel="noopener norefferer nofollow"
+                >CSS system fonts cheatsheet</a
+              >
+            </td>
+            <td>Набор внутрених стилей для всех ситсем</td>
+          </tr>
+          <tr>
+            <td>22</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://github.com/web-standards-ru/dictionary/blob/main/dictionary.md" rel="noopener norefferer nofollow"
+                >Словарь терминов по фронтенду</a
+              >
+            </td>
+            <td>Словарь терминов по фронтенду</td>
+          </tr>
+          <tr>
+            <td>23</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://code.tutsplus.com/ru/tutorials/the-30-css-selectors-you-must-memorize--net-16048" rel="noopener norefferer nofollow"
+                >30 CSS</a
+              >
+            </td>
+            <td>30 CSS селекторов, которые вы должны запомнить</td>
+          </tr>
         </tbody>
       </table>
     </main>
