--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://unicode-table.com/en/" rel="noopener norefferer nofollow"
-                >Unicode Character Table</a
+                href="http://foxtools.ru/Unicode" rel="noopener norefferer nofollow"
+                >Таблица символов Юникода</a
               >
             </td>
-            <td>Спеціальні запатентовані Unicode</td>
+            <td>Таблица символов Юникода</td>
           </tr>
           <tr>
             <td>8</td>
@@ -311,6 +311,18 @@
               >
             </td>
             <td>30 CSS селекторов, которые вы должны запомнить</td>
+          </tr>
+          <tr>
+            <td>24</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.w3schools.com/cssref/css_websafe_fonts.asp" rel="noopener norefferer nofollow"
+                >CSS Web Safe Fonts</a
+              >
+            </td>
+            <td>CSS Web Safe Fonts</td>
           </tr>
         </tbody>
       </table>
