--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 >CSS Web Safe Fonts</a
               >
             </td>
-            <td>CSS Web Safe Fonts</td>
+            <td>Внтурение шрифты которые не нужно добавлять через ссылку</td>
           </tr>
         </tbody>
       </table>
