--- a/index.html
+++ b/index.html
@@ -324,6 +324,18 @@
             </td>
             <td>Внтурение шрифты которые не нужно добавлять через ссылку</td>
           </tr>
+          <tr>
+            <td>25</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://squoosh.app/" rel="noopener norefferer nofollow"
+                >Squoosh</a
+              >
+            </td>
+            <td>Форматування відео</td>
+          </tr>
         </tbody>
       </table>
     </main>
