--- a/index.html
+++ b/index.html
@@ -336,6 +336,19 @@
             </td>
             <td>Форматування відео</td>
           </tr>
+          <tr>
+            <td>26</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://github.com/sindresorhus/modern-normalize" rel="noopener norefferer nofollow"
+                >modern-normalize
+                </a
+              >
+            </td>
+            <td>Нормолізатор CSS</td>
+          </tr>
         </tbody>
       </table>
     </main>
