--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 >HTML Reference type</a
               >
             </td>
-            <td>Всі тегі HTML</td>
+            <td>Всі тегі HTML які діляться на блокові та строчні</td>
           </tr>
           <tr>
             <td>11</td>
