--- a/video.html
+++ b/video.html
@@ -137,6 +137,19 @@
             </td>
             <td>Модуль 2. Вебинар №4. Оформление текста и шрифты Александр</td>
           </tr>
+          <tr>
+            <td>9</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.youtube.com/watch?v=KHCnpp7RSfY"
+                rel="noopener norefferer nofollow"
+                >Розбір Макету Barbershop (стилі Текст)</a
+              >
+            </td>
+            <td>Розбір Макету Barbershop (стилі Текст)</td>
+          </tr>
         </tbody>
       </table>
     </main>
