--- a/index.html
+++ b/index.html
@@ -349,6 +349,19 @@
             </td>
             <td>Нормолізатор CSS</td>
           </tr>
+          <tr>
+            <td>26</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://nthchild.kawalekkodu.pl/en/"
+                >Child Generator - click and get CSS nth-child formula!
+                </a
+              >
+            </td>
+            <td>Child генератор</td>
+          </tr>
         </tbody>
       </table>
     </main>
