--- a/video.html
+++ b/video.html
@@ -150,6 +150,19 @@
             </td>
             <td>Розбір Макету Barbershop (стилі Текст)</td>
           </tr>
+          <tr>
+            <td>9</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.youtube.com/watch?v=EVVRPExVA68&t=1s"
+                rel="noopener norefferer nofollow"
+                >Розбір Макету Barbershop (About, Prices, Benefits)</a
+              >
+            </td>
+            <td>Розбір Макету Barbershop (About, Prices, Benefits)</td>
+          </tr>
         </tbody>
       </table>
     </main>
