--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             <td>Нормолізатор CSS</td>
           </tr>
           <tr>
-            <td>26</td>
+            <td>27</td>
             <td>
               <a
                 class="link"
@@ -361,6 +361,58 @@
               >
             </td>
             <td>Child генератор</td>
+          </tr>
+          <tr>
+            <td>28</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://cssgradient.io/"
+                >CSS Gradient
+                </a
+              >
+            </td>
+            <td>CSS Gradient</td>
+          </tr>
+          <tr>
+            <td>29</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://uigradients.com/#Mantle"
+                >CSS Gradient
+                </a
+              >
+            </td>
+            <td>CSS Gradient</td>
+          </tr>
+          <tr>
+            <td>30</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://projects.verou.me/conic-gradient/"
+                >CSS conic-gradient() polyfill
+                </a
+              >
+            </td>
+            <td>CSS conic-gradient() polyfill</td>
+          </tr>
+          <tr>
+            <td>31</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://cssgenerator.org/box-shadow-css-generator.html"
+                >Box Shadow CSS Generator
+                </a
+              >
+            </td>
+            <td>Box Shadow CSS Generator</td>
           </tr>
         </tbody>
       </table>
